# mkdocs-same-dir

./: README.md  mkdocs.yml  properdocs.yml  pyproject.toml  setup.py
.github/workflows/: ci.yml
.tools/: ci.sh  copier-answers.yml  release.sh  test.sh
docs/: requirements.txt
example/: README.md  mkdocs.yml  properdocs.yml
example/subdir/: README.md
mkdocs_same_dir/: plugin.py
requirements/: requirements-docs.txt  requirements-style.txt
