[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mkdocs-same-dir"
description = "MkDocs plugin to allow placing mkdocs.yml in the same directory as documentation"
readme = "README.md"
license = "MIT"
keywords = ["mkdocs", "mkdocs-plugin"]
authors = [
    {name = "Oleh Prypin", email = "oleh@pryp.in"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Documentation",
    "Topic :: Software Development :: Documentation",
]
dynamic = ["version"]
requires-python = ">=3.8"
dependencies = [
    "mkdocs >=1.0.3",
    #min "jinja2 >=2.10.1",
    #min "markupsafe >=2.0.1",
    #min "Markdown >=3.2.1",
]

[project.urls]
Documentation = "https://oprypin.github.io/mkdocs-same-dir/"
Source = "https://github.com/oprypin/mkdocs-same-dir"
Issues = "https://github.com/oprypin/mkdocs-same-dir/issues"

[project.entry-points."mkdocs.plugins"]
same-dir = "mkdocs_same_dir.plugin:SameDirPlugin"

[tool.hatch.version]
path = "mkdocs_same_dir/__init__.py"

[tool.hatch.build.targets.sdist]
include = ["/mkdocs_same_dir"]

[tool.hatch.envs.default.scripts]
all = [
    "hatch run style:fix",
    "hatch run types:check",
    "hatch run test:test",
]

[tool.hatch.envs.test.scripts]
test = [
    "bash .tools/test.sh",
]

[tool.hatch.envs.types]
dependencies = [
    "mypy",
]
[tool.hatch.envs.types.scripts]
check = [
    "mypy mkdocs_same_dir"
]

[tool.hatch.envs.style]
skip-install = true
dependencies = [
    "ruff",
    "isort",
    "black",
]
[tool.hatch.envs.style.scripts]
fix = [
    "ruff check --fix mkdocs_same_dir",
    "format",
]
format = [
    "isort -q mkdocs_same_dir",
    "black -q mkdocs_same_dir",
]

[tool.hatch.envs.docs]
detached = true
dependencies = [
    "mkdocs >=1.5",
    "mkdocs-material >=7.1.4",
    "pymdown-extensions >=8.2",
]

[tool.black]
line-length = 100

[tool.isort]
profile = "black"
line_length = 100

[tool.ruff]
select = [
    "F", "W", "E", "UP", "YTT", "C4", "DTZ", "FA", "ISC", "PIE", "T20", "RSE", "TCH",
    "B002", "B003", "B005", "B007", "B009", "B012", "B013", "B014", "B015", "B018", "B020", "B021", "B023", "B026", "B033", "B034", "B905",
    "COM818",
    "PERF101",
    "PGH002", "PGH004", "PGH005",
    "FLY002",
    "PLC", "PLE", "PLR0124", "PLR0133", "PLR0206", "PLR0402", "PLR1701", "PLR1722", "PLW0120", "PLW0127", "PLW0129", "PLW0131", "PLW0406", "PLW0602", "PLW0603", "PLW0711",
    "RUF001", "RUF005", "RUF007", "RUF010", "RUF013", "RUF100", "RUF200",
    "SIM101", "SIM107", "SIM201", "SIM202", "SIM208", "SIM210", "SIM211", "SIM300", "SIM401", "SIM910",
]
ignore = ["E501", "E731"]
[tool.ruff.flake8-comprehensions]
allow-dict-calls-with-keyword-arguments = true

[tool.mypy]
warn_unreachable = true
show_error_codes = true
