[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mkdocs-same-dir"
description = "MkDocs plugin to allow placing mkdocs.yml in the same directory as documentation"
readme = "README.md"
license = "MIT"
keywords = ["mkdocs", "mkdocs-plugin"]
authors = [
    {name = "Oleh Prypin", email = "oleh@pryp.in"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Documentation",
    "Topic :: Software Development :: Documentation",
]
dynamic = ["version"]
requires-python = ">=3.8"
dependencies = [
    "mkdocs >=1.0.3",
    #min "jinja2 >=2.10.1",
    #min "markupsafe >=2.0.1",
    #min "Markdown >=3.2.1",
]

[project.urls]
Documentation = "https://oprypin.github.io/mkdocs-same-dir/"
Source = "https://github.com/oprypin/mkdocs-same-dir"
Issues = "https://github.com/oprypin/mkdocs-same-dir/issues"

[project.entry-points."mkdocs.plugins"]
same-dir = "mkdocs_same_dir.plugin:SameDirPlugin"

[tool.hatch.version]
path = "mkdocs_same_dir/__init__.py"

[tool.hatch.build.targets.sdist]
include = ["/mkdocs_same_dir"]

[tool.hatch.env]
requires = [
    "hatch-mkdocs",
    "hatch-pip-compile",
]

[tool.hatch.envs.default.scripts]
all = [
    "hatch run style:fix",
    "hatch run types:check",
    "hatch run test:test",
]

[tool.hatch.envs.test.scripts]
test = [
    "bash .tools/test.sh",
]

[tool.hatch.envs.types]
dependencies = [
    "mypy",
]
[tool.hatch.envs.types.scripts]
check = [
    "mypy mkdocs_same_dir"
]

[tool.hatch.envs.style]
skip-install = true
dependencies = [
    "ruff",
]
[tool.hatch.envs.style.scripts]
fix = [
    "ruff check --fix mkdocs_same_dir",
    "format",
]
format = [
    "ruff format -q mkdocs_same_dir",
]

[tool.hatch.env.collectors.mkdocs.docs]
[tool.hatch.envs.docs]
type = "pip-compile"
pip-compile-hashes = false

[tool.ruff]
line-length = 100
select = [
    "F", "W", "E", "I", "UP", "YTT", "C4", "DTZ", "T10", "FA", "ISC", "PIE", "T20", "RSE", "TCH",
    "N803", "N804", "N805", "N806", "N807", "N815", "N816", "N999",
    "B002", "B003", "B005", "B007", "B008", "B009", "B010", "B011", "B012", "B013", "B014", "B015", "B016", "B017", "B018", "B020", "B021", "B022", "B023", "B025", "B026", "B029", "B030", "B031", "B032", "B033", "B034", "B905",
    "COM818",
    "G001", "G010", "G202",
    "RET502",
    "SIM101", "SIM103", "SIM105", "SIM107", "SIM118", "SIM201", "SIM202", "SIM208", "SIM210", "SIM211", "SIM212", "SIM220", "SIM221", "SIM222", "SIM223", "SIM300", "SIM401", "SIM910",
    "PGH002", "PGH003", "PGH004", "PGH005",
    "PLC", "PLE",
    "PLR0124", "PLR0133", "PLR0206", "PLR0402", "PLR1701", "PLR1722", "PLW0120", "PLW0127", "PLW0129", "PLW0131", "PLW0406", "PLW0602", "PLW0603", "PLW0711", "PLW1508", "PLW3301",
    "TRY302", "TRY401",
    "FLY002",
    "PERF101", "PERF102", "PERF402",
    "RUF001", "RUF005", "RUF007", "RUF008", "RUF009", "RUF010", "RUF011", "RUF013", "RUF015", "RUF016", "RUF100", "RUF200",
]
ignore = ["E501", "E731"]
[tool.ruff.flake8-comprehensions]
allow-dict-calls-with-keyword-arguments = true

[tool.mypy]
warn_unreachable = true
allow_redefinition = true
